--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -50,11 +50,11 @@ msgid "Expires in %s seconds..."
 msgstr ""
 
 msgctxt "#32012"
-msgid "Done. Sign me in!"
+msgid "Yes! Count me in"
 msgstr ""
 
 msgctxt "#32013"
-msgid "Verifying authentication..."
+msgid "No"
 msgstr ""
 
 msgctxt "#32014"
@@ -198,7 +198,7 @@ msgid "Loading %s items in this folder, please wait..."
 msgstr ""
 
 msgctxt "#32050"
-msgid "--unused--"
+msgid "Do you want to help reporting errors to resolve them quickly?"
 msgstr ""
 
 msgctxt "#32052"
