--- a/resources/language/resource.language.he_il/strings.po
+++ b/resources/language/resource.language.he_il/strings.po
@@ -50,12 +50,12 @@ msgid "Expires in %s seconds..."
 msgstr "פג ב- %s שניות."
 
 msgctxt "#32012"
-msgid "Done. Sign me in!"
-msgstr "בוצע. הכנס אותי!"
+msgid "כן! אני בפנים"
+msgstr ""
 
 msgctxt "#32013"
-msgid "Verifying authentication..."
-msgstr "מוודא אימות..."
+msgid "No"
+msgstr "לא"
 
 msgctxt "#32014"
 msgid "Retrieving credentials..."
@@ -194,8 +194,8 @@ msgid "Loading %s items in this folder, please wait..."
 msgstr "טוען %s פריטים בתיקיה זו, המתן ..."
 
 msgctxt "#32050"
-msgid "--unused--"
-msgstr "--לא בשימוש--"
+msgid "Do you want to help reporting errors to resolve them quickly?"
+msgstr "האם ברצונך לעזור בדיווח שגיאות כדי לפתור אותן במהירות?"
 
 msgctxt "#32052"
 msgid "Files"
