--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -280,3 +280,12 @@ msgstr ""
 msgctxt "#32071"
 msgid "Go to [Add-ons > %s > Add an account...] to add one."
 msgstr ""
+
+msgctxt "#32072"
+msgid "[B]Security Error[/B]"
+msgstr ""
+
+msgctxt "#32073"
+msgid "Ip change detected: [B]%s[/B] to [B]%s[/B]. Make sure you stay in the same network."
+msgstr ""
+
