--- a/resources/language/resource.language.he_il/strings.po
+++ b/resources/language/resource.language.he_il/strings.po
@@ -38,12 +38,12 @@ msgid "Connecting with server, please wait..."
 msgstr "מתחבר עם השרת, אנא המתן..."
 
 msgctxt "#32009"
-msgid "Go to URL: %s"
-msgstr "עבור לקישור: %s"
+msgid "Scan the QR code and sign in."
+msgstr "Scan the QR code and sign in."
 
 msgctxt "#32010"
-msgid "Enter this code and follow instructions: %s"
-msgstr "הכנס את הקוד ובצע את ההוראות: %s"
+msgid "or[CR]Go to this URL: %s[CR]enter the code and sign in: %s"
+msgstr "or[CR]Go to this URL: %s[CR]enter the code and sign in: %s"
 
 msgctxt "#32011"
 msgid "Expires in %s seconds..."
