cleanup option added to export

--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -351,3 +351,15 @@ msgstr ""
 msgctxt "#32085"
 msgid "Destination"
 msgstr ""
+
+msgctxt "#32086"
+msgid "Clean Redundant"
+msgstr ""
+
+msgctxt "#32087"
+msgid "cleanup"
+msgstr ""
+
+msgctxt "#32088"
+msgid "cleaning"
+msgstr ""
